--- a/drip-protocol/frontend/package.json
+++ b/drip-protocol/frontend/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "drip-protocol-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "description": "DRIP Protocol - Real-time sBTC & STX streaming payments on Stacks",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -82,7 +83,6 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
     "jsdom": "^20.0.3",
-    "lovable-tagger": "^1.1.13",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
